"""Again as an example I am using the same preprocessing module."""
[metadata]
name = eeg-preprocessing-pipeline
version = 0.1.0
author = Lucas Vidal Murakami
author_email = lucas@murakami.com.br
description = Tools for preprocessing and converting 3D EEG meshes and volumes into point clouds.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = eeg, neuroimaging, point cloud, mesh, preprocessing
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pyvista
    open3d
    nibabel
    pydicom
    scikit-image

[options.package_data]
* = *.nii, *.nii.gz, *.dcm, *.obj, *.ply, *.stl

